[gd_scene load_steps=3 format=3 uid="uid://cuvgqa6px7l7u"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_f08p7"]
[ext_resource type="LabelSettings" uid="uid://cwnr7bis7uo27" path="res://Resources/big.tres" id="2_k8k4s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_f08p7")

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -75.0
offset_right = 73.5
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = ExtResource("2_k8k4s")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 0

[node name="SettingsList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Reset" type="Button" parent="VBoxContainer/ScrollContainer/SettingsList"]
layout_mode = 2
text = "Reset"

[node name="Clear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
text = "Clear"

[node name="Dimensions" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 83.0625
grow_vertical = 0
min_value = 1.0
max_value = 3.0
value = 2.0
suffix = "D"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/SettingsList/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
